pkg/lang/syntax/testdata/ub/validate/invalid/factory/missing-import.ub
factory: {
  locals: {
    message: text.render('hello')
  }
}
